--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.trello:rxlifecycle-components:1.0'
     compile 'com.google.guava:guava:20.0'
     compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.zhy:base-rvadapter:3.0.3'
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
